--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,104 @@
 body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+	margin: 0;
+	font-family: 'Courier';
+	background-image: url('assets/portfolio_background.jpg');
+	background-size: cover;
+	background-position: center;
+	color: lightgray;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+	font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+		monospace;
+}
+.name {
+	font-size: 58px;
+	text-align: left;
+	color: #8795ce;
+}
+.bioText {
+	font-size: 44px;
+	text-align: left;
+}
+.bio {
+	margin-left: 20px;
+	width: 85%;
+	margin-top: 40px;
+}
+.contact {
+	margin-top: 120px;
+	align-items: center;
+	justify-content: center;
+	margin-right: 100px;
+}
+
+img {
+	height: 500px;
+}
+
+.icon {
+	height: 40px;
+	margin: 5px;
+}
+
+.icon:hover {
+	cursor: pointer;
+}
+
+.cardImg {
+	height: 180px;
+	width: 300px;
+}
+
+.App {
+	display: flex;
+	justify-content: center;
+	margin-top: 20px;
+}
+.left {
+	margin-left: 10px;
+}
+
+.projects {
+	display: flex;
+}
+
+.projectDisplay {
+	display: flex;
+	justify-content: center;
+}
+
+.blogDisplay {
+	display: flex;
+}
+
+.card {
+	margin: 5px;
+	transition: transform 0.3s ease-in-out;
+}
+.card:hover {
+	transform: scale(1.1);
+}
+
+img {
+	border-radius: 5px;
+}
+h2 {
+	color: #8795ce;
+	font-size: 30px;
+	text-decoration: underline;
+}
+
+a:link {
+	color: white;
+}
+a:visited {
+	color: white;
+}
+a:hover {
+	color: lightblue;
+}
+
+.email {
+	color: #8795ce;
 }
