--- a/src/index.css
+++ b/src/index.css
@@ -7,6 +7,10 @@ body {
 	color: lightgray;
 }
 
+.App {
+	text-align: center;
+}
+
 code {
 	font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
 		monospace;
